--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^17.0.13",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.2.0",
+    "@vitest/ui": "^0.7.8",
     "autoprefixer": "^10.4.4",
     "babel-plugin-formatjs": "^10.3.18",
     "cross-env": "^7.0.3",
