--- a/package.json
+++ b/package.json
@@ -7,49 +7,54 @@
     "@heroicons/react": "^1.0.6",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
-    "msw": "^0.39.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-intl": "^5.24.7",
+    "msw": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intl": "^6.2.7",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@formatjs/cli": "^4.8.2",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/react": "^6.4.19",
-    "@storybook/testing-library": "^0.0.9",
-    "@storybook/testing-react": "^1.2.4",
+    "@formatjs/cli": "^6.0.0",
+    "@storybook/addon-essentials": "^7.0.0-beta.38",
+    "@storybook/addon-interactions": "^7.0.0-beta.38",
+    "@storybook/react": "^7.0.0-beta.38",
+    "@storybook/react-vite": "^7.0.0-beta.38",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/testing-react": "^2.0.0-next.0",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.42",
-    "@types/react-dom": "^17.0.13",
-    "@types/uuid": "^8.3.4",
-    "@vitejs/plugin-react": "^1.2.0",
-    "@vitest/ui": "^0.7.8",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/uuid": "^9.0.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.28.3",
+    "@vitest/ui": "^0.28.3",
     "autoprefixer": "^10.4.4",
     "babel-plugin-formatjs": "^10.3.18",
     "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-formatjs": "^3.0.0",
-    "eslint-plugin-storybook": "^0.5.7",
-    "jsdom": "^19.0.0",
+    "eslint-plugin-formatjs": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.10",
+    "jsdom": "^21.1.0",
     "msw-storybook-addon": "^1.6.1",
     "postcss": "^8.4.12",
     "prettier": "^2.6.0",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "rollup-plugin-visualizer": "^5.6.0",
-    "storybook-builder-vite": "^0.1.21",
-    "storybook-dark-mode": "^1.0.9",
+    "storybook": "^7.0.0-beta.38",
+    "storybook-dark-mode": "^2.0.5",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
-    "vite": "^2.8.6",
-    "vitest": "^0.7.8",
+    "vite": "^4.1.1",
+    "vite-tsconfig-paths": "^4.0.5",
+    "vitest": "^0.28.3",
     "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
@@ -60,7 +65,7 @@
     "test:coverage": "vitest run --coverage",
     "test:ci": "cross-env CI=true vitest run --coverage",
     "lint": "eslint src .storybook --max-warnings 0",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "intl:extract": "formatjs extract \"src/**/*.ts*\" --out-file lang/en.json --ignore \"src/**/*.test.tsx\" --ignore \"src/**/*.stories.tsx\" --ignore \"src/vite-env.d.ts\"",
     "intl:compile": "formatjs compile-folder lang src/i18n",
     "format": "prettier --write src",
