--- a/package.json
+++ b/package.json
@@ -4,55 +4,56 @@
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.5.3",
-    "@heroicons/react": "^2.0.14",
-    "@hookform/resolvers": "^2.9.10",
-    "@tanstack/react-query": "^4.24.4",
+    "@heroicons/react": "^2.0.15",
+    "@hookform/resolvers": "^2.9.11",
+    "@tanstack/react-query": "^4.24.6",
     "clsx": "^1.1.1",
     "ky": "^0.33.2",
-    "msw": "^1.0.0",
+    "msw": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.0",
-    "react-intl": "^6.2.7",
-    "react-router-dom": "^6.2.2",
+    "react-hook-form": "^7.43.1",
+    "react-intl": "^6.2.8",
+    "react-router-dom": "^6.8.1",
     "uuid": "^9.0.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@formatjs/cli": "^6.0.0",
+    "@formatjs/cli": "^6.0.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
-    "@storybook/addon-essentials": "^7.0.0-beta.38",
-    "@storybook/addon-interactions": "^7.0.0-beta.38",
-    "@storybook/react": "^7.0.0-beta.38",
-    "@storybook/react-vite": "^7.0.0-beta.38",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^7.0.0-beta.48",
+    "@storybook/addon-interactions": "^7.0.0-beta.48",
+    "@storybook/react": "^7.0.0-beta.48",
+    "@storybook/react-vite": "^7.0.0-beta.48",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/node": "^18.11.19",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/coverage-c8": "^0.28.3",
+    "@vitest/coverage-c8": "^0.28.5",
     "autoprefixer": "^10.4.4",
-    "eslint": "^8.11.0",
+    "eslint": "^8.34.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-formatjs": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.10",
-    "eslint-plugin-testing-library": "^5.10.0",
+    "eslint-plugin-testing-library": "^5.10.2",
     "jsdom": "^21.1.0",
     "postcss": "^8.4.12",
-    "prettier": "^2.6.0",
-    "prettier-plugin-tailwindcss": "^0.2.2",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "rollup-plugin-visualizer": "^5.6.0",
-    "storybook": "^7.0.0-beta.38",
-    "storybook-dark-mode": "^2.0.5",
-    "tailwindcss": "^3.0.23",
+    "storybook": "^7.0.0-beta.48",
+    "storybook-dark-mode": "^2.0.6",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.6.2",
     "vite": "^4.1.1",
     "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^0.28.3",
+    "vitest": "^0.28.5",
     "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
