--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "devDependencies": {
     "@formatjs/cli": "^6.0.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^7.0.0-beta.48",
-    "@storybook/addon-interactions": "^7.0.0-beta.48",
-    "@storybook/react": "^7.0.0-beta.48",
-    "@storybook/react-vite": "^7.0.0-beta.48",
+    "@storybook/addon-actions": "^7.0.0-beta.50",
+    "@storybook/addon-essentials": "^7.0.0-beta.50",
+    "@storybook/addon-interactions": "^7.0.0-beta.50",
+    "@storybook/react": "^7.0.0-beta.50",
+    "@storybook/react-vite": "^7.0.0-beta.50",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -47,7 +47,7 @@
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
     "rollup-plugin-visualizer": "^5.6.0",
-    "storybook": "^7.0.0-beta.48",
+    "storybook": "^7.0.0-beta.50",
     "storybook-dark-mode": "^2.0.6",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.6.2",
